--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-*_win10_*.xml
-*_win10_*.vcxproj.filters
-*_win10_*.vcxproj
-*_win10_*.targets
-*_win10_*.props
-*_win10_*.sln
+libjpeg_win10_*.xml
+libjpeg*.vcxproj.filters
+libjpeg*.vcxproj
+libjpeg_win10_*.targets
+libjpeg_win10_*.props
+libjpeg*.sln
+
